[package]
name = "farmer"
version = "0.1.0"
edition = "2021"

[dependencies]
avian2d = "0.1.2"
bevy = { version = "0.14.2", features = ["bevy_dev_tools"] }
bevy-inspector-egui = "0.26.0"
bevy_ecs_ldtk = "0.10.0"
bevy_ecs_tilemap = "0.14.0"
bevy_egui = "0.30.0"
bevy_light_2d = "0.4.0"
noise = "0.9.0"
rand = "0.8.5"
